[tool.poetry]
name = "heartbeat_watcher"
version = "0.1.0"
description = "Monitor heartbeats in Celery"
authors = ["Alexander <alexander.lagerstrom@configura.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
